Add auth api using mock db

--- a/public/register.html
+++ b/public/register.html
@@ -15,7 +15,7 @@
       <h1>Register</h1>
       <h2>Create your account</h2>
     </hgroup>
-    <form>
+    <form action="/api/auth/register" method="post">
       <input type="text" name="username" placeholder="Username" required>
       <input type="email" name="email" placeholder="Email" required>
       <input type="password" name="password" placeholder="Password" required>
