--- a/public/login.html
+++ b/public/login.html
@@ -15,8 +15,8 @@
       <h1>Sign in</h1>
       <h2>Please enter your detail</h2>
     </hgroup>
-    <form>
-      <input type="email" name="Email" placeholder="Email" required>
+    <form action="/api/auth/login" method="post">
+      <input type="name" name="name" placeholder="Username or Email" required>
       <input type="password" name="password" placeholder="Password" required>
       <fieldset>
         <label for="remember">
