--- a/public/login.html
+++ b/public/login.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 
 <body style="display: flex; height: 100vh; justify-content: center; align-items: center;">
@@ -30,7 +30,7 @@
       <h1>Sign in</h1>
       <h2>Please enter your detail</h2>
     </hgroup>
-    <form action="/auth/login" method="post">
+    <form action="/api/auth/login" method="post">
       <input type="name" name="name" placeholder="Username or Email" required>
       <input type="password" name="password" placeholder="Password" required>
       <fieldset>
