--- a/public/login.html
+++ b/public/login.html
@@ -11,21 +11,6 @@
 
 <body style="display: flex; height: 100vh; justify-content: center; align-items: center;">
   <div style="max-width: 500px;">
-    <% if (info) { %>
-      <div class="info-container">
-        <%= info %>
-      </div>
-    <% } %>
-    <% if (warn) { %>
-      <div class="warn-container">
-        <%= warn %>
-      </div>
-    <% } %>
-    <% if (error) { %>
-      <div class="error-container">
-        <%= error %>
-      </div>
-    <% } %>
     <hgroup>
       <h1>Sign in</h1>
       <h2>Please enter your detail</h2>
@@ -41,7 +26,7 @@
       </fieldset>
       <button type="submit" class="contrast">Submit</button>
     </form>
-    <p>Don't have an account? <a href="register">Register here</a></p>
+    <p>Don't have an account? <a href="register.html">Register here</a></p>
   </div>
 </body>
 
