--- a/public/login.html
+++ b/public/login.html
@@ -7,15 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <link rel="stylesheet" href="stylesheets/style.css">
+  <script src="scripts/htmx/htmx.min.js"></script>
 </head>
 
-<body style="display: flex; height: 100vh; justify-content: center; align-items: center;">
+<body style="display: flex; height: 100vh; justify-content: center; align-items: center;" hx-boost="true">
   <div style="max-width: 500px;">
     <hgroup>
       <h1>Sign in</h1>
       <h2>Please enter your detail</h2>
     </hgroup>
-    <form action="/api/auth/login" method="post">
+    <form hx-post="/auth/login" hx-swap="afterbegin">
       <input type="name" name="name" placeholder="Username or Email" required>
       <input type="password" name="password" placeholder="Password" required>
       <fieldset>
