--- a/public/register.html
+++ b/public/register.html
@@ -7,15 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register</title>
   <link rel="stylesheet" href="stylesheets/style.css">
+  <script src="scripts/htmx/htmx.min.js"></script>
 </head>
 
-<body style="display: flex; height: 100vh; justify-content: center; align-items: center;">
+<body style="display: flex; height: 100vh; justify-content: center; align-items: center;" hx-boost="true">
   <div style="max-width: 500px;">
     <hgroup>
       <h1>Register</h1>
       <h2>Create your account</h2>
     </hgroup>
-    <form action="/api/auth/register" method="post">
+    <form hx-post="/auth/register" hx-swap="afterbegin">
       <input type="text" name="username" placeholder="Username" required>
       <input type="email" name="email" placeholder="Email" required>
       <input type="password" name="password" placeholder="Password" required>
